--- a/src/components/dropdown-pop-over/styles.module.css
+++ b/src/components/dropdown-pop-over/styles.module.css
@@ -37,23 +37,17 @@
 }
 
 .PopoverClose {
-  font-family: inherit;
+  margin: 0.5rem;
+  display: flex;
   border-radius: 100%;
-  height: 25px;
-  width: 25px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--violet-11);
+  padding: 0.3rem;
+  border: 1px solid #ccc;
   position: absolute;
   top: 5px;
   right: 5px;
 }
 .PopoverClose:hover {
   background-color: var(--violet-4);
-}
-.PopoverClose:focus {
-  box-shadow: 0 0 0 2px var(--violet-7);
 }
 
 .IconButton {
@@ -66,13 +60,6 @@
   border: 1px solid #ccc;
   cursor: pointer;
   position: relative;
-}
-
-.Fieldset {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  cursor: pointer;
 }
 
 .Item {
